# InterfaceManager

./: CMakeLists.txt  README.md  error_dialog.cpp  error_dialog.h  error_dialog.ui  interfacemanager.cpp  interfacemanager.h  interfacemanager.ui  main.cpp
